# ML-SUS-14-15-proj2

./: CMakeLists.txt  README.md  create-symlinks.sh  labels.h  main.cpp  mask.h  thinning.h
